--- a/index.HTML
+++ b/index.HTML
@@ -79,15 +79,15 @@
   <body>
     <ul class="nav_1">
       <li class="sub">
-        <img src="./img/아이콘1.png" alt="" />
+        <img src="./아이콘1.png" alt="" />
         <p>상담</p>
       </li>
       <li class="sub">
-        <img src="./img/아이콘2.png" alt="" />
+        <img src="./아이콘2.png" alt="" />
         <p>추천점포</p>
       </li>
       <li class="sub">
-        <img src="./img/아이콘3.png" alt="" />
+        <img src="./아이콘3.png" alt="" />
         <p>고객센터</p>
       </li>
     </ul>
@@ -95,7 +95,7 @@
 
     <header>
       <nav class="main">
-        <img src="./img/로고1.png" alt="">
+        <img src="./로고1.png" alt="">
         <a href="">셀렉토커피</a>
         <a href="">메뉴</a>
         <a href="">창업안내</a>
@@ -128,10 +128,10 @@
       </div>
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./img/1.png" alt=""></div>
-          <div class="swiper-slide"><img src="./img/2.png" alt=""></div>
-          <div class="swiper-slide"><img src="./img/3.png" alt=""></div>
-          <div class="swiper-slide"><img src="./img/4.png" alt=""></div>
+          <div class="swiper-slide"><img src="./1.png" alt=""></div>
+          <div class="swiper-slide"><img src="./2.png" alt=""></div>
+          <div class="swiper-slide"><img src="./3.png" alt=""></div>
+          <div class="swiper-slide"><img src="./4.png" alt=""></div>
         </div>
      
       </div>
@@ -141,7 +141,7 @@
       <h1>셀렉토 창업 스토리</h1>
       <div class="">
           <div class="dec_2">
-            <img src="./img/123.png" alt="">
+            <img src="./123.png" alt="">
               <h2>“커피를 소홀히 다루지 말아야 경쟁력 있는 카페가 돼요”</h2>
               <br><p>본사에서 제공하는 메뉴얼 그대로 따라 관리하고 추출하면 가장
                 맛있는 커피가 나와요.<br>
@@ -154,7 +154,7 @@
     </section>
     <section class="sec4">
       <h1>24시간 온라인 상담</h1>
-      <div><img src="./img/Group 89.png" alt="분석 이미지" /></div>
+      <div><img src="./Group 89.png" alt="분석 이미지" /></div>
     </section>
     <section class="sec5">
       <div>
@@ -167,7 +167,7 @@
       </div>
       <ul>
         <li>
-          <img src="./img/점.png" alt="">
+          <img src="./점.png" alt="">
           <span>코끝 쌀쌀한 날씨, 셀렉토커피 연말 시즌 러블리 메뉴 출시</span>
           <p>
             커피전문 프랜차이즈 셀렉토커피가 선선해지는 가을과 연말 시즌을 맞아
@@ -176,7 +176,7 @@
           </p>
         </li>
         <li>
-          <img src="./img/점.png" alt="">
+          <img src="./점.png" alt="">
           <span>셀렉토커피, 여름맞이 신메뉴 출시</span>
           <p>
             커피 전문점 셀렉토커피가 여름 시즌을 맞아 
@@ -185,7 +185,7 @@
           </p>
         </li>
         <li>
-          <img src="./img/점.png" alt="">
+          <img src="./점.png" alt="">
           <span>셀렉토커피 ‘크로플 빙수’ 재 출시</span>
           <p>
             관계자는 "커피 전문 프랜차이즈 브랜드 셀렉토커피는 작년 한 해 신 <br>
@@ -196,19 +196,21 @@
           </p>
         </li>
       </ul>
-      <div class="s1"><img src="./img/free-icon-document-3850283 1.png" alt=""></div>
-      <div class="s2"><img src="./img/free-icon-user-3541487 1.png" ait=""></div>
+      <div class="s1"><img src="./free-icon-document-3850283 1.png" alt=""></div>
+      <div class="s2"><img src="./free-icon-user-3541487 1.png" alt=""></div>
+    </section>
     <footer>
-   <div class="inner">
-    <div><img src="./img/Group 74.png" alt=""></div>
-    <p>
-      <strong>주소</strong> : 서울시 구로구 구로3동 222-14
-      에이스하이엔드타워 2차 1402호,1404호<br />
-      <strong>도로명주소 </strong>: 서울시 구로구 디지털로26길 61
-      에이스하이엔드타워 2차 1402호,1404호 <br />전화 : 1600-5649ㆍ팩스 :
-      02-6340-1701ㆍ대표이사 : 황규연ㆍ사업자등록번호 : 109-81-99153
-    </p>
-   </div>
+      <div class="inner">
+        <div><img src="./Group 74.png" alt="로고" /></div>
+        <p>
+          <strong>주소</strong> : 서울시 구로구 구로3동 222-14
+          에이스하이엔드타워 2차 1402호,1404호<br />
+          <strong>도로명주소 </strong>: 서울시 구로구 디지털로26길 61
+          에이스하이엔드타워 2차 1402호,1404호 <br />전화 : 1600-5649ㆍ팩스 :
+          02-6340-1701ㆍ대표이사 : 황규연ㆍ사업자등록번호 : 109-81-99153
+        </p>
+      
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
